# py-icsgrouper

./: group  group.py  pyproject.toml  regroup  regroup.py
