[tool.poetry]
name = "ics_testing"
version = "0.1.0"
description = ""
authors = ["Marcel Parciak <marcel.parciak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ics = "^0.7.2"
spacy = "^3.7.4"
pandas = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
